--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,11 @@
 ---
 layout: default
 ---
+<article class="post">
 
-<article class="page">
-
-  <h1>{{ page.title }}</h1>
-
-  <div class="entry">
+  <h1 class="post-title">{{ page.title }}</h1>
+  <div class="post-content">
     {{ content }}
   </div>
+
 </article>
